모듈 불러오기 테스트중

--- a/static/sub.html
+++ b/static/sub.html
@@ -19,5 +19,9 @@
   <input type="submit" name="send" value="send">
   <br>
 
+  <script>
+    import * as signUpAsset from './index.html';
+  </script>
+  
 </body>
 </html>
