--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,8 @@
   <title>Document</title>
 </head>
 <body>
+  <!-- form을 제출하면 POST 방식으로 sub.html로 이동
+      제출할 때 check 함수를 실행하여 유효성 검사 진행 -->
   <form method="POST" action="sub.html" id="form" onsubmit="return check();">
     <p>ID</p>
     <input type="text" id="ID">
@@ -28,23 +30,24 @@
     
   </form>
   <script>
-    const id = document.getElementById("ID");
-    const password = document.getElementById("password");
-    const passwordTwo = document.getElementById("passwordTwo");
-    const email = document.getElementById("email");
+    const id = document.getElementById("ID"); // id input
+    const password = document.getElementById("password"); // password input
+    const passwordTwo = document.getElementById("passwordTwo"); // passwordTwo input
+    const email = document.getElementById("email"); // email input
 
     function check(){
 
+      // 영어 소문자와 대문자를 포함하는 정규식
       const regId = new RegExp (`^(?=.*[a-z])(?=.*[A-Z])`);
 
-      // 아이디 대소문자 확인
+      // 아이디에 영어 대소문자 확인하는 조건식
       if(!regId.test(`${id.value}`)){
             alert("영문 대소문자를 꼭 포함해주세요.")
             id.focus();
             return false;
         }
             
-      // 비밀번호 확인
+      // password와 passwordTwo 가 동일하게 작성되었는지 확인하는 조건식
       if(password.value !== passwordTwo.value){
         alert("비밀번호가 동일하지 않습니다.")
         password.focus();
@@ -55,14 +58,14 @@
         return false;
       }
 
-      // email 확인
+      // email에 @, . 을 포함하는지 확인하는 조건식
       if(email.value.indexOf("@") == -1 || email.value.indexOf(".") == -1){
         alert("잘못된 이메일 형식입니다.")
         email.focus();
         return false;
         }
 
-        return true;
+        return true; // 확인이 끝난 후 true 반환
     }
 
   </script>
