--- a/static/sub.html
+++ b/static/sub.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <p>ooo님! 반갑습니다</p>
+
   <form method="POST" id="form">
     <p>Title</p>
     <input type="text" id="title" name="title">
@@ -21,24 +22,24 @@
   </form>
 
   <script>
-    const title = document.getElementById("title");
-    const text = document.getElementById("text")
-    const btn = document.getElementById('btn')
+    const title = document.getElementById("title"); // title input
+    const text = document.getElementById("text") // text input
+    const btn = document.getElementById('btn') // send button
 
-    function caution (){
-      if(title.value === ""){
-        alert("제목을 입력해주세요")
-        title.focus();
-      }
-
-      if(text.value === ""){
+    // input을 빈칸으로 버튼을 누르면 팝업창 뜨는 함수
+    btn.addEventListener('click', caution => {
+        if(title.value === ""){
+          alert("제목을 입력해주세요")
+          title.focus();
+        }
+        
+        if(text.value === ""){
         alert("내용을 입력해주세요")
         text.focus();
-      }
-    }
-    
-    btn.addEventListener('mouseover', caution)
+        }
+    })
 
+    // input이 빈칸 여부에 따른 버튼 활성화 함수
     function active() {
       if (!(title.value && text.value)) {
         btn.disabled = true;
@@ -47,17 +48,9 @@
       }
     }
 
+    // 키보드 입력할 때 버튼 활성화 함수 실행
     title.addEventListener("keyup", active);
     text.addEventListener("keyup", active);
-
-    // btn.addEventListener('mouseover', function(){
-    //   if (title.value === "" || text.value === ""){
-    //     btn.disabled = true;
-    //     alert("내용을 입력해주세요")
-    //   }
-    //   btn.disabled = false;
-    // });
-
 
   </script>
 </body>
