조건문 , 이벤트 작동방식 수정

--- a/static/sub.html
+++ b/static/sub.html
@@ -27,13 +27,13 @@
     const btn = document.getElementById('btn') // send button
 
     // input을 빈칸으로 버튼을 누르면 팝업창 뜨는 함수
-    btn.addEventListener('click', caution => {
-        if(title.value === ""){
+    btn.addEventListener('mouseover', caution => {
+        if(!(title.value)){
           alert("제목을 입력해주세요")
           title.focus();
         }
         
-        if(text.value === ""){
+        if(!(text.value)){
         alert("내용을 입력해주세요")
         text.focus();
         }
